[package]
name = "lambda-next"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "spore-api-server",
]

[lib]
name = "lambda_next" 
path = "src/lib.rs"

[[bin]]
name = "lambda_next"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["connect", "native-tls"] }
futures = "0.3"
url = "2.5"
config = { version = "0.15", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ckb-jsonrpc-types = "0.118.0"
ckb-types = "0.118.0"
ckb-sdk = "3.4.0"
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Spore Protocol
spore-types = "0.3.0"
hex = "0.4.3"
molecule = "0.7.5"
lazy_static = "1.4.0"
# Database
sqlx = { version = "0.7", features = ["tls-native-tls", "postgres", "json", "macros", "runtime-tokio"] }
# HTTP client for JSON-RPC
reqwest = { version = "0.11", features = ["json"] }
# Error handling
anyhow = "1.0"
