[package]
name = "spore-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda-next = { path = ".." }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["server", "client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
config = { version = "0.15", features = ["toml"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0" 